# Contest5

./: .gitignore  CMakeLists.txt
taskA/: main.cpp
taskB/: main.cpp
taskE/: main.cpp  main.h
